Fix overflowing and dividing with 0

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@
     font-size: 2.5em;
     margin-left: 12px;
     background-color: cyan;
+    overflow-wrap: anywhere;
 }
 
 
